Sites file download working. Needs logic to prevent overwriting sites file when trans_log has not been uploaded. Also fixed bug on home screen site info. An existing relative position object would break the site info when returning from downloading and changing trapping areas to a different zone.

--- a/www/css/gadget.css
+++ b/www/css/gadget.css
@@ -12,3 +12,11 @@
     padding: 1%;
 }
 
+.progress{
+    margin: auto;
+    padding: 1%;
+    background-color: #9CCB3B;
+    font-size: 1.5em;
+    float: left;
+}
+
